feat: Исправить замечания по итогам первого код-ревью